(NET-633) add swagger

--- a/src/http/api/feed/swag/Feed.yaml
+++ b/src/http/api/feed/swag/Feed.yaml
@@ -8,6 +8,10 @@ properties:
     type: array
     items:
     - $ref: ../../investors/swag/Investor.yaml
+  total:
+    type: integer
+  pages:
+    type: integer
 required:
 - feed
 - investors
