Update swagger description

--- a/src/http/api/investors/swag/Investors.yaml
+++ b/src/http/api/investors/swag/Investors.yaml
@@ -1,4 +1,18 @@
-type: array
-title: Investors Model
-items:
-- $ref: ./Investor.yaml
+type: object
+title: Investors Response
+properties:
+  investors:
+    type: array
+    title: Investors Model
+    items:
+    - $ref: ./Investor.yaml
+  total:
+    type: integer
+    description: Amount of investors
+  pages:
+    type: integer
+    description: Amount of pages
+required:
+- investors
+- total
+- pages
