--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "stream-to-promise":
       "^1.1.1",
 
-    "gm":
-      "^1.22.0",
+    "lwip":
+      "^0.0.9",
 
     "mkdirp":
       "^0.5.1",
