Symbol, Watchlist: tune optional fields.

--- a/src/http/api/watchlist/swag/WatchlistInvestor.yaml
+++ b/src/http/api/watchlist/swag/WatchlistInvestor.yaml
@@ -23,8 +23,7 @@ get:
             type: number
             description: Investor's target price of asset
         required:
-          - exchange
-          - ticker
+          - symbol
           - price
           - target_price
 
