deploy: render nginx conf.

--- a/cfg/env/_nginx.conf
+++ b/cfg/env/_nginx.conf
@@ -1,11 +1,11 @@
 
 server
 {
-	listen 8080;
+	listen {{ port_nginx }};
 
 	location /
 	{
-		proxy_pass http://localhost:8081;
+		proxy_pass http://localhost:{{ port }};
 	}
 
 	location /admin/
