--- a/src/http/api/feed/swag/GetFeed.yaml
+++ b/src/http/api/feed/swag/GetFeed.yaml
@@ -29,26 +29,34 @@ get:
     in: query
     type: string
     description: Investor Ids - 1,2,...6,7
-  - name: days
+  - name: last_days
     in: query
     type: number
     description: Feeds for days
-  - name: months
+  - name: last_weeks
+    in: query
+    type: number
+    description: Feeds for weeks
+  - name: last_months
     in: query
     type: number
     description: Feeds for months
+  - name: last_years
+    in: query
+    type: number
+    description: Feeds for years
   - name: name
     in: query
     type: string
     description: User name
-  - name: maxyear
+  - name: mindate
     in: query
-    type: number
-    description: Feed up to a year
-  - name: minyear
+    type: string
+    description: Feed up to a date (ISO 8601 strings)
+  - name: maxdate
     in: query
-    type: number
-    description: Feed after a year
+    type: string
+    description: Feed after a date (ISO 8601 strings)
   responses:
     200:
       description: user's Feed
