--- a/src/http/api/auth/swag/Login.yaml
+++ b/src/http/api/auth/swag/Login.yaml
@@ -26,7 +26,7 @@ post:
     200:
       description: user model
       schema:
-        $ref: ../../../swagger/User.yaml
+        $ref: ../../../swagger/UserFull.yaml
     400:
       description: if something went wrong
       schema:
