--- a/src/http/api/feed/swag/FeedByTrade.yaml
+++ b/src/http/api/feed/swag/FeedByTrade.yaml
@@ -3,23 +3,23 @@ get:
   parameters:
   - name: max_id
     in: query
-    type: number
+    type: integer
     description: |
       Get feed items that are added before *max_id* (inclusive) with applied sorting
       [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
   - name: since_id
     in: query
-    type: number
+    type: integer
     description: |
       Get feed items greater than *since_id* (non inclusive) with applied sorting
       [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
   - name: page
     in: query
-    type: number
+    type: integer
     description: Page number
   - name: investor
     in: query
-    type: number
+    type: integer
     description: Investor Id
   responses:
     200:
