--- a/src/http/api/users/swag/HistoricalReturns.yaml
+++ b/src/http/api/users/swag/HistoricalReturns.yaml
@@ -3,7 +3,7 @@ items:
   type: object
   properties:
     year:
-      type: number
+      type: integer
       description: year
     percentage:
       type: number
