--- a/src/http/api/investors/swag/GetInvestor.yaml
+++ b/src/http/api/investors/swag/GetInvestor.yaml
@@ -3,7 +3,7 @@ get:
   parameters:
   - name: investor_id
     in: path
-    type: number
+    type: integer
     description: Feed Item ID
     required: true
   responses:
