rm bg mentions, use pic, profile-pic, /upload/pic, /upload/profile-pic

--- a/src/http/api/statics/swag/UploadProfilePic.yaml
+++ b/src/http/api/statics/swag/UploadProfilePic.yaml
@@ -3,7 +3,7 @@ post:
   consumes:
   - multipart/form-data
   parameters:
-  - name: investor_bg
+  - name: profile_pic
     description: |
       Picture for investor background
     in: formData
