--- a/src/http/api/users/swag/AdminsList.yaml
+++ b/src/http/api/users/swag/AdminsList.yaml
@@ -16,7 +16,10 @@ get:
       schema:
         $ref: ./Users.yaml
     400:
-      description: if something went wrong
+      description: |
+        **Error object** which follows
+        [Error Protocol](https://weezlabs.atlassian.net/wiki/display/NET/Errors)
+
       schema:
         $ref: ../../../swagger/Error.yaml
 
