--- a/src/http/api/watchlist/swag/WatchlistUser.yaml
+++ b/src/http/api/watchlist/swag/WatchlistUser.yaml
@@ -13,12 +13,16 @@ get:
           price:
             type: number
             description: current price of asset
+          currency:
+            type: string
+            description: currency of price (mostly common "USD")
           gain:
             type: number
             description: asset's gain in current day
         required:
           - symbol
           - price
+          - currency
           - gain
 
     400:
