--- a/cfg/config.json
+++ b/cfg/config.json
@@ -36,5 +36,10 @@
   "sendgrid":
   {
     "key": "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"
+  },
+
+  "subscr":
+  {
+    "token": "BbfiKZ9U0aQAwnfj6sxO6tQ5v7W9vCEZ"
   }
 }
