(NET-788) Migrate to new structure of Investor

--- a/src/http/api/investors/swag/GetPostInvestors.yaml
+++ b/src/http/api/investors/swag/GetPostInvestors.yaml
@@ -18,6 +18,10 @@ get:
     in: query
     type: integer
     description: Page number
+  - name: symbol
+    in: query
+    type: string
+    description: Symbol to filter investors `ticker[.exchange]`
   responses:
     200:
       description: Investors list
