--- a/src/http/api/auth/swag/LoginFacebook.yaml
+++ b/src/http/api/auth/swag/LoginFacebook.yaml
@@ -8,6 +8,15 @@ post:
     required: true
     type: integer
     format: int64
+  - name: payload
+    in: body
+    required: false
+    schema:
+      type: object
+      properties:
+        email:
+          type: string
+          description: Email used if facebook email does not exists
   responses:
     200:
       description: Facebook user model
