(NET-789) filter feed by symbol: watchlist and trades

--- a/src/http/api/feed/swag/GetFeed.yaml
+++ b/src/http/api/feed/swag/GetFeed.yaml
@@ -57,6 +57,10 @@ get:
     in: query
     type: string
     description: Feed after a date (ISO 8601 strings)
+  - name: symbol
+    in: query
+    type: string
+    description: Symbol to filter investors `TICKER[.EXCHANGE]`
   responses:
     200:
       description: user's Feed
