return hash after upload

--- a/src/http/api/statics/swag/UploadProfilePic.yaml
+++ b/src/http/api/statics/swag/UploadProfilePic.yaml
@@ -13,6 +13,12 @@ post:
   responses:
     200:
       description: investor's background updated
+      schema:
+        type: object
+        properties:
+          hash:
+            type: string
+            description: uploaded profile_pic hash
     400:
       description: if something went wrong
 
