Update swagger model

--- a/src/http/swagger/UserFull.yaml
+++ b/src/http/swagger/UserFull.yaml
@@ -18,6 +18,7 @@ properties:
     description: URL to User's image
   investor:
     type: object
+    title: Investor Model
     description: |
       Investor's info if User is investor
     properties:
@@ -32,8 +33,10 @@ properties:
         description: Investor's background
       historical_returns:
         type: array
+        title: Historical Returns Model
         items:
           type: object
+          title: Historical Return Model
           properties:
             year:
               type: number
@@ -44,11 +47,12 @@ properties:
       is_public:
         type: boolean
         description: If Investor is public
-      start_date: 
+      start_date:
         type: string
         description: Date of Investor's publicity
   admin:
     type: object
+    title: Admin Model
     description: |
       Investor's info if User is admin
     properties:
