[NET-790] Add swagger description for added watchlist symbol

--- a/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
+++ b/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
@@ -26,6 +26,8 @@ put:
   responses:
     200:
       description: Symbol added
+      schema:
+        $ref: ./AddedSymbol.yaml
 
     400:
       description: |
