--- a/src/http/api/watchlist/swag/PutDelete-WatchlistUser.yaml
+++ b/src/http/api/watchlist/swag/PutDelete-WatchlistUser.yaml
@@ -11,6 +11,8 @@ put:
   responses:
     200:
       description: Symbol added
+      schema:
+        $ref: ./AddedSymbol.yaml
 
     400:
       description: |
