--- a/src/http/api/symbols/swag/SymbolChartItem.yaml
+++ b/src/http/api/symbols/swag/SymbolChartItem.yaml
@@ -1,16 +1,20 @@
 type: object
 title: Chart Item Model
 properties:
-  timestamp:
+  period:
     type: string
-    format: datetime
-    description: Date and time **AS IS** from xIgnite. Local time for exchange
-  utcOffset:
-    type: number
-    format: integer
-    description: UTC Offset to Exchange local time. Hours
-  value:
-    type: number
+    description: period name
+    enum:
+    - today
+    - ytd
+    - m1
+    - m6
+    - y1
+    - y5
+  points:
+    type: array
+    items:
+    - $ref: ./ChartPoint.yaml
 required:
-- timestamp
-- value
+- period
+- points
