(NET-799) fix swagger

--- a/src/http/api/investors/swag/Investor.yaml
+++ b/src/http/api/investors/swag/Investor.yaml
@@ -30,6 +30,9 @@ properties:
   annual_return:
     type: number
     description: Investor's 5 year annual return in percentage
+  is_featured:
+    type: boolean
+    description: Is featured Investor
 required:
 - id
 - first_name
