Stock info: add `last` and `percent_change_from_open` fields

--- a/src/http/api/symbols/swag/Get-SymbolInfo.yaml
+++ b/src/http/api/symbols/swag/Get-SymbolInfo.yaml
@@ -22,6 +22,10 @@ get:
             type: integer
           volume:
             type: integer
+          last:
+            type: integer
+          percent_change_from_open:
+            type: integer
           market_cap:
             type: object
             description: Fundamental type – MarketCapitalization
