(NET-792) fix swagger

--- a/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
+++ b/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
@@ -1,6 +1,6 @@
 put:
   description: |
-    Put Symbol in Investors's Watchlist
+    Put Symbol in Investors's Watchlist (watchlist limited to 500 item)
   parameters:
   - name: symbol_x
     in: path
