(NET-824) Add swagger description for investor holdings

--- a/src/http/api/investors/swag/Investor.yaml
+++ b/src/http/api/investors/swag/Investor.yaml
@@ -32,6 +32,8 @@ properties:
     description: Investor's 5 year annual return in percentage
   historical_returns:
     $ref: ./HistoricalReturns.yaml
+  holdings:
+    $ref: ./Holdings.yaml
   is_featured:
     type: boolean
     description: Is featured Investor
@@ -41,3 +43,4 @@ required:
 - last_name
 - focus
 - annual_return
+- historical_returns
