[NET-917] Update swagger description

--- a/src/http/api/comments/swag/Comment.yaml
+++ b/src/http/api/comments/swag/Comment.yaml
@@ -8,6 +8,11 @@ properties:
     type: array
     items:
     - $ref: ./CommentUser.yaml
+  count:
+    type: number
+    format: integer
+    description: Amount of comments
 required:
 - comments
 - users
+- count
