fix swagger for trade event and post

--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -23,26 +23,33 @@ post:
           type: object
           description: Post properties
           properties:
-            dir: 
+            dir:
+              description: Type of trade operation
               type: string
-              description: Trade dirs - sold / bought
+              enum:
+              - sold
+              - bought
             symbol:
-              type: string
-              description: Symbol ticker.exchange
+              $ref: ../../../swagger/Symbol.yaml
             price:
+              type: number
+              format: float
+              minimum: 0
+            amount:
               type: integer
-              description: Symbol price
-            amount: 
-              type: integer
-              description: Symbol amount
+              minimum: 0
             text:
               type: string
-              description: Trade description
             risk:
               type: string
-              description: Trade risk value
+              enum:
+              - low
+              - medium
+              - hign
             motivations:
-              type: string
+              type: array
+              items:
+                type: string
           required:
           - dir
           - symbol
@@ -54,19 +61,24 @@ post:
           type: object
           description: Post properties
           properties:
-            dir: 
+            dir:
+              description: Type of watchlist operation
               type: string
-              description: Trade dirs - added / removed
+              enum:
+              - added
+              - removed
             symbol:
-              type: string
-              description: Symbol ticker.exchange
+              $ref: ../../../swagger/Symbol.yaml
             target_price:
-              type: integer
+              type: number
+              format: float
+              minimum: 0
             text:
               type: string
-              description: Watchlist description
-            motivations: 
-              type: string
+            motivations:
+              type: array
+              items:
+                type: string
           required:
           - dir
           - symbol
@@ -78,8 +90,7 @@ post:
             symbols:
               type: array
               items:
-                type: string
-                description: Symbol ticker.exchange
+                $ref: ../../../swagger/Symbol.yaml
             title:
               type: string
               description: Update title
@@ -87,7 +98,9 @@ post:
               type: string
               description: Update description
             motivations:
-              type: string
+              type: array
+              items:
+                type: string
           required:
           - symbols
           - title
