--- a/src/http/api/feed/swag/FeedPost.yaml
+++ b/src/http/api/feed/swag/FeedPost.yaml
@@ -58,6 +58,7 @@ post:
           - amount
           - text
           - risk
+          - motivations
         watchlist_data:
           type: object
           description: Post properties
@@ -84,7 +85,9 @@ post:
           required:
           - dir
           - symbol
+          - target_price
           - text
+          - motivations
         update_data:
           type: object
           description: Post properties
@@ -100,10 +103,6 @@ post:
             text: 
               type: string
               description: Update description
-            motivations:
-              type: array
-              items:
-                type: string
           required:
           - symbols
           - title
